# gitignore-builder-rs

./: .gitignore  Cargo.toml  README.md  Shuttle.toml  cli-command.sh  server-commands.sh
data/: gitignore-tree.json  schema.json
src/: github.rs  lib.rs  telemetry.rs
