[package]
name = "gitignore-builder-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
axum-extra = { version = "0.8.0", features = ["query"] }
clap = { version = "4.4.6", features = ["derive"] }
reqwest = "0.11.22"
shuttle-axum = "0.29.0"
shuttle-runtime = "0.29.0"
tokio = { version = "1.33.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.189", features = ["derive"] }
futures = "0.3.28"
clap-verbosity-flag = "2.0.1"
fs-err = "2.9.0"
serde_json = "1.0.107"
strum = { version = "0.25.0", features = ["strum_macros", "derive"] }
serde_derive = "1.0.189"
tracing = "0.1.37"
log = "0.4.20"
opentelemetry = { version = "0.20.0", features = ["logs"] }
opentelemetry-appender-log = { version = "0.1.0", default-features = false }

opentelemetry-stdout = { version = "0.1.0", features = ["logs", "metrics", "trace"] }
opentelemetry_sdk = { version = "0.20.0", features = ["logs"] }

# The below are optional because of a Cargo convention
# [[bin]]
# name="cli"
# path="src/bin/cli.rs"

# [[bin]]
# name="server"
# path="src/bin/server.rs"

[[bin]]
name="gitignore-builder-rs"
path="src/bin/shuttle.rs"
