[package]
name = "gitignore-builder-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum="0.6.20"
axum-extra = { version = "0.8.0", features = ["query"] }
clap = { version = "4.4.6", features = ["derive"] }
reqwest = "0.11.22"
shuttle-axum = "0.30.0"
shuttle-runtime = { version = "0.30.0", default-features = false }
tokio = { version = "1.33.0", features = ["rt", "rt-multi-thread", "macros", "full"] }
serde = { version = "1.0.189", features = ["derive"] }
futures = "0.3.28"
clap-verbosity-flag = "2.0.1"
fs-err = "2.9.0"
serde_json = "1.0.107"
strum = { version = "0.25.0", features = ["strum_macros", "derive"] }
serde_derive = "1.0.189"
tracing = "0.1.37"
opentelemetry = { version = "0.20.0", features = ["logs"] }
opentelemetry-appender-log = { version = "0.1.0", default-features = false }

opentelemetry-stdout = { version = "0.1.0", features = ["logs", "metrics", "trace"] }
opentelemetry_sdk = { version = "0.20.0", features = ["logs", "rt-tokio"] }
axum-tracing-opentelemetry = "0.14.1"
init-tracing-opentelemetry = { version = "0.14.1", features = ["opentelemetry-otlp"] }
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
tracing-opentelemetry = "0.21.0"
opentelemetry-otlp = { version = "0.13.0", features = ["http-proto", "reqwest-client"] }
opentelemetry-semantic-conventions = "0.12.0"
opentelemetry_api = "0.20.0"
shuttle-secrets = "0.30.1"

# The below are optional because of a Cargo convention
# [[bin]]
# name="cli"
# path="src/bin/cli.rs"

# [[bin]]
# name="server"
# path="src/bin/server.rs"

[[bin]]
name="gitignore-builder-rs"
path="src/bin/shuttle.rs"
